# rtcom-accounts-plugin-gtalk

./: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  google-talk.profile  gtalk-advanced.glade  idle-advanced.glade  jabber-advanced.glade  jabber-new-account.glade  sip-advanced.glade
debian/: changelog  control  rtcom-accounts-plugin-gtalk.install  rtcom-accounts-plugins.install  rtcom-accounts-plugins.postinst  rules
src/: Makefile.am  advanced-page.h  compile.sh  gtalk-plugin.c  idle-plugin.c  jabber-plugin.c  sip-plugin.c
